--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -3,3 +3,6 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap');
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
